Fix display of LSP images in dark mode

--- a/assets/css/media-queries/_prefers-color-scheme.scss
+++ b/assets/css/media-queries/_prefers-color-scheme.scss
@@ -30,4 +30,8 @@
 
         }
     }
+
+    img[src$=".svg"]{
+        filter: invert(100%);
+    }
 }
